# copilot-mcp-soc-pack

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/chatmodes/: deploy.chatmode.md  security-review.chatmode.md  tool-dev.chatmode.md
.github/instructions/: deploy.instructions.md  docs.instructions.md  sc-plugin.instructions.md  tool-module.instructions.md
.github/prompts/: add-tool.prompt.md  deploy-to-azure.prompt.md  release.prompt.md
.github/workflows/: bicep-build.yml  build-push.yml  eval.yml  lint-test.yml
deploy/: azuredeploy.json  main.bicep  parameters.example.json
docs/: eval.md  promptbook.md  security-copilot-registration.md  tracing.md  v0.8-msschema-migration.md
mcp-client-config/: claude-desktop.json  vscode.mcp.json
sc-plugin/: agent.yaml  ai-plugin.json  manifest.yaml
sc-plugin/msschema/: manifest.yaml
scripts/: eval.ps1  setup-branch-protection.ps1  smoke.ps1
src/: __init__.py  app.py
src/common/: __init__.py  http.py  openapi_compat.py  tracing.py
src/tools/: __init__.py  abusech.py  abuseipdb.py  attack.py  circl_hashlookup.py  crtsh.py  d3fend.py  epss.py  greynoise.py  hibp.py  kev.py  osv.py  otx.py  ransomwarelive.py
tests/: conftest.py  test_app.py  test_auth.py  test_http_reliability.py  test_security.py  test_smoke.py  test_tools_unit.py  test_tracing.py
tests/eval/: __init__.py  conftest.py  test_live_scenarios.py
